--- a/table.html
+++ b/table.html
@@ -14,8 +14,8 @@
             <th>Mobile</th>
         </tr>
         <tr>
-            <td>John</td>
-            <td>Doe</td>
+            <td>Arun</td>
+            <td>Kumar</td>
             <td>1234567890</td>
         </tr>
     </table>
